Makes the app fully functional

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,15 @@ plugins {
     id 'com.android.library' version '7.2.1' apply false
 }
 
+
+allprojects {
+    repositories {
+        google()
+        maven { url 'https://jitpack.io' }
+        jcenter()
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
